# clipwise

./: .env.example  .gitignore  .prettierignore  AGENTS.md  LICENSE  README.md  eslint.config.js  lefthook.yml  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: appstore-release.yml  appstore.yml  bump-version.yml  ci.yml  release.yml
docs/: certificates-setup.md
fastlane/: Appfile  Fastfile  README.md
fastlane/metadata/en-US/: release_notes.txt
scripts/: bump-version.sh  generate-appstore-screenshots.sh
src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: action_service.rs  app.rs  apple_attach.rs  clipboard.rs  config.rs  error.rs  history.rs  json_store.rs  lib.rs  llm_response.rs  logging.rs  main.rs  models.rs  notifications.rs  paths.rs  retry.rs  service.rs  tray.rs  window.rs
src-tauri/src/commands/: app_info_cmd.rs  apple_cmd.rs  config_cmd.rs  history_cmd.rs  llm_cmd.rs  mod.rs  service_cmd.rs  validate_cmd.rs
src-tauri/src/providers/: anthropic.rs  apple.rs  cli.rs  http.rs  mod.rs  openai.rs  test_helpers.rs
src-tauri/swift/: apple-model-runner.swift
src/components/: About.test.tsx  About.tsx  ActionForm.test.tsx  ActionForm.tsx  ActionList.test.tsx  ActionList.tsx  ActionRunner.test.tsx  ActionRunner.tsx  ApiProviderForm.tsx  CliProviderForm.test.tsx  CliProviderForm.tsx  ConfirmDeleteActions.tsx  EditorHeader.tsx  EmptyState.tsx  ErrorBox.tsx  FormFooter.tsx  HistoryEntryCard.tsx  HistoryList.test.tsx  HistoryList.tsx  Picker.tsx  ProviderForm.test.tsx  ProviderForm.tsx  ProviderFormSections.tsx  ProviderList.test.tsx  ProviderList.tsx  RunResultCard.test.tsx  RunResultCard.tsx  SectionHeader.tsx  Settings.test.tsx  Settings.tsx  SuccessBox.tsx
src/hooks/: useAsyncAction.ts  useCliProviderEnabled.test.ts  useCliProviderEnabled.ts  useConfig.ts  useProviderFormState.test.ts  useProviderFormState.ts  useTransientMessage.test.ts  useTransientMessage.ts
src/lib/: appleAvailability.ts  cliPreview.ts  errors.ts  history.test.ts  history.ts  providers.ts  tauri.test.ts  tauri.ts  validation.test.ts  validation.ts
src/test/: fixtures.ts  setup.ts
src/types/: config.ts
src/types/bindings/: Action.ts  AppConfig.ts  AppInfo.ts  AppSettings.ts  AppleModelAvailability.ts  HistoryEntry.ts  Provider.ts  ProviderType.ts
swift-plugin/: Package.swift
swift-plugin/Sources/: ServiceHandler.swift
