[package]
name = "llm-actions"
version = "0.1.0"
description = "macOS LLM Text Action Plugin"
authors = ["andrewmmc"]
edition = "2021"

[lib]
name = "llm_actions_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
