[package]
name = "clipwise"
version = "0.1.4"
description = "macOS menu bar app for LLM-powered text transformations"
authors = ["andrewmmc"]
edition = "2021"

[lib]
name = "clipwise_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "sync", "time", "process", "io-util", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dirs = "5"
thiserror = "2"
shlex = { version = "1", optional = true }
ts-rs = { version = "12", optional = true, features = ["serde-compat"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-foundation = { version = "0.3", features = [
  "CFDictionary",
  "CFNumber",
  "CFString",
] }
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSPasteboard",
  "NSRunningApplication",
  "NSWorkspace",
] }
objc2-foundation = { version = "0.3", features = ["NSObject", "NSString"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
wiremock = "0.6"
tempfile = "3"

[features]
default = ["cli-provider"]
custom-protocol = ["tauri/custom-protocol"]
cli-provider = ["dep:shlex"]
ts = ["dep:ts-rs"]
